// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextWithLabel renders with a label and content and sizes set correctly 1`] = `
<div
  class="TextWithLabel__Component-sc-13uehc1-0 hfpARe"
>
  <p
    class="TextWithLabel__Heading-sc-13uehc1-1 jFXYqw"
  >
    label
  </p>
  <p
    class="TextWithLabel__Content-sc-13uehc1-2 EMMWx"
  >
    content
  </p>
</div>
`;

exports[`TextWithLabel renders with a label and content correctly 1`] = `
<div
  class="TextWithLabel__Component-sc-13uehc1-0 hfpARe"
>
  <p
    class="TextWithLabel__Heading-sc-13uehc1-1 cZTmCL"
  >
    label
  </p>
  <p
    class="TextWithLabel__Content-sc-13uehc1-2 fgCPNy"
  >
    content
  </p>
</div>
`;
